<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HorariosActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_header_selector"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/comfortaa"
        android:text="@string/r0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <TextView
        android:id="@+id/TITULO2"
        android:layout_width="262dp"
        android:layout_height="94dp"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/comfortaa"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/hor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/comfortaa"
        android:text="@string/r2"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/comfortaa"
        android:text="@string/r3"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/comfortaa"
        android:text="@string/r4"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/comfortaa"
        android:text="@string/r5"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/comfortaa"
        android:text="@string/r6"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/comfortaa"
        android:text="@string/r7"
        app:layout_constraintEnd_toEndOf="@+id/textView17"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/comfortaa"
        android:text="@string/r8"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/comfortaa"
        android:text="@string/r1"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="114dp"
        android:layout_height="134dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>