<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_header_selector"
    tools:context=".LogActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="314dp"
        android:layout_height="142dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="40sp"
        android:src="@drawable/logohorizontal" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/logo"
        android:orientation="vertical">

    </LinearLayout>

    <TextView
        android:layout_width="369dp"
        android:layout_height="90dp"
        android:layout_below="@id/logo"
        android:id="@id/inf"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/comfortaa"
        android:text="@string/inflogin"
        android:textAlignment="center"
        android:layout_marginVertical="15sp"
        android:textSize="13sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login"
        android:layout_width="300sp"
        android:layout_height="45dp"
        android:layout_below="@id/inf"
        android:background="@drawable/rounded_corner"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/comfortaa"
        android:layout_marginVertical="15sp"
        android:hint="@string/login"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/senha"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_width="300sp"
        android:layout_height="45dp"
        android:layout_below="@id/login"
        android:background="@drawable/rounded_corner"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/comfortaa"
        android:layout_marginVertical="0sp"
        android:hint="@string/senha"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/bt24"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/senha"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="15sp"
        android:background="#003C1212"
        android:backgroundTint="#00FFFFFF"
        android:foreground="@drawable/acessar"
        android:foregroundGravity="fill"
        app:layout_constraintHorizontal_bias="1.0" />









</RelativeLayout>