<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_header_selector"
    tools:context=".epeciaActivity">

  <ImageView
      android:id="@+id/imageView9"
      android:layout_width="305dp"
      android:layout_height="166dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/logohorizontal" />

  <TextView
      android:id="@+id/textView20"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:textStyle="bold"
      android:background="@drawable/rounded_corner"
      android:fontFamily="@font/comfortaa"
      android:text="@string/espc"
      android:textSize="17sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView9" />

  <TextView
      android:id="@+id/textView21"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="24dp"
      android:textStyle="bold"
      android:background="@drawable/rounded_corner"
      android:fontFamily="@font/comfortaa"
      android:text="@string/conveni"
      android:textSize="17sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView9" />

  <ImageView
      android:id="@+id/imageView10"
      android:layout_width="181dp"
      android:layout_height="85dp"
      android:layout_marginTop="16dp"
      app:layout_constraintEnd_toEndOf="@+id/textView21"
      app:layout_constraintHorizontal_bias="0.69"
      app:layout_constraintStart_toStartOf="@+id/textView21"
      app:layout_constraintTop_toBottomOf="@+id/textView21"
      app:srcCompat="@drawable/a5" />

  <ImageView
      android:id="@+id/imageView11"
      android:layout_width="190dp"
      android:layout_height="64dp"
      app:layout_constraintEnd_toEndOf="@+id/imageView10"
      app:layout_constraintStart_toStartOf="@+id/imageView10"
      app:layout_constraintTop_toBottomOf="@+id/imageView10"
      app:srcCompat="@drawable/a2" />

  <ImageView
      android:id="@+id/imageView12"
      android:layout_width="158dp"
      android:layout_height="81dp"
      app:layout_constraintEnd_toEndOf="@+id/imageView11"
      app:layout_constraintStart_toStartOf="@+id/imageView11"
      app:layout_constraintTop_toBottomOf="@+id/imageView11"
      app:srcCompat="@drawable/a6" />

  <ImageView
      android:id="@+id/imageView13"
      android:layout_width="159dp"
      android:layout_height="114dp"
      app:layout_constraintEnd_toEndOf="@+id/imageView12"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="@+id/imageView12"
      app:layout_constraintTop_toBottomOf="@+id/imageView12"
      app:srcCompat="@drawable/a1" />

  <ImageView
      android:id="@+id/imageView14"
      android:layout_width="165dp"
      android:layout_height="110dp"
      app:layout_constraintEnd_toEndOf="@+id/imageView13"
      app:layout_constraintStart_toStartOf="@+id/imageView13"
      app:layout_constraintTop_toBottomOf="@+id/imageView13"
      app:srcCompat="@drawable/a4" />

  <TextView
      android:id="@+id/textView22"
      android:layout_width="185dp"
      android:layout_height="252dp"
      android:layout_marginTop="16dp"
      android:background="@drawable/rounded_corner"
      android:fontFamily="@font/comfortaa"
      android:text="@string/espc2"
      android:textSize="18dp"
      app:layout_constraintEnd_toEndOf="@+id/textView20"
      app:layout_constraintStart_toStartOf="@+id/textView20"
      app:layout_constraintTop_toBottomOf="@+id/textView20" />
</androidx.constraintlayout.widget.ConstraintLayout>